--- a/d/di/die/dietdirect.com.html
+++ b/d/di/die/dietdirect.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dietdirect.com privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214165106id_/http%3A//www.dietbargains.com/Privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dietdirect.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615104345id_/http%3A//dietdirect.com/Privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy</title>
@@ -43,29 +43,29 @@ a:active {
 	font-weight: bold;
 	color: #000000;
 }
-.style236 {font-size: x-small; color: #0000CC; font-family: Verdana, Arial, Helvetica, sans-serif;}
-.style82 {color: #0000FF}
+.style237 {font-size: xx-small}
+.style230 {font-size: x-small; font-family: Verdana, Arial, Helvetica, sans-serif; color: #000000; }
 -->
 </style>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" text="#666666" alink="#6699FF">
-<table width="772" border="0" cellspacing="0" cellpadding="0">
-  <tbody><tr valign="top"> 
-    <td nowrap="">      <div align="left"><img src="images/Head1.jpg" width="267" height="50"><img src="images/Head2.jpg" width="314" height="50"><img src="images/Head3.jpg" width="191" height="50"><br>
-        <table width="774" height="22" border="2" cellpadding="0" cellspacing="0" bordercolor="#FFFFFF" bgcolor="#33FFFF">
-          <tbody><tr>
-            <th width="134" height="18" scope="col">
-              <div align="center"><span class="style203"><a href="Testimonials.htm">TESTIMONIALS</a></span> </div></th>
-            <th width="226" height="18" class="style74" scope="col"><div align="center"><a href="Guarantee.htm">SATISFACTION GUARANTEE</a></div></th>
-            <th width="100" height="18" scope="col"><div align="center"><span class="style74"><a href="AboutUs.htm"> ABOUT US </a> </span></div></th>
-            <th width="118" height="18" scope="col"><div align="center"><span class="style74"><a href="ContactUs.htm">CONTACT US </a></span></div></th>
-            <th width="68" height="18" scope="col"><div align="center"><span class="style74"><a href="http://www.dietdirect.com">HOME</a> </span></div></th>
-            <th width="112" height="18" scope="col"><div align="center"><span class="style74"><a href="http://www.cartserver.com/sc/cart.cgi?item=s-4418&amp;view.x=1">VIEW CART </a></span></div></th>
-          </tr>
-        </tbody></table>
-    </div>
-    </td>
+<table width="776" border="0" cellspacing="0" cellpadding="0">
+  <tbody><tr valign="top">
+    <td width="776" height="74" nowrap="">
+      <div align="left"><img src="images/Header1.jpg" alt="DietDirect.com - Diet Pills -  Diet Protein Shakes - Protein Supplements - Weight Loss Programs - Liquid Diets" width="360" height="63"><a href="Shipping.htm"><img src="images/Header2.jpg" width="412" height="63" border="0"></a><br>
+          <table width="774" height="22" border="2" cellpadding="0" cellspacing="0" bordercolor="#FFFFFF" bgcolor="#33FFFF">
+            <tbody><tr>
+              <th width="146" height="18" scope="col">
+                <div align="center"><span class="style203"><a href="Testimonials.htm">TESTIMONIALS</a></span> </div></th>
+              <th width="179" height="18" class="style74" scope="col"><div align="center"><a href="Guarantee.htm">100% GUARANTEE</a></div></th>
+              <th width="104" height="18" scope="col"><div align="center"><span class="style74"><a href="AboutUs.htm"> ABOUT US </a> </span></div></th>
+              <th width="134" height="18" scope="col"><div align="center"><span class="style74"><a href="ContactUs.htm">CONTACT US </a></span></div></th>
+              <th width="83" height="18" scope="col"><div align="center"><span class="style74"><a href="http://www.dietdirect.com">HOME</a> </span></div></th>
+              <th width="112" height="18" scope="col"><div align="center"><span class="style74"><a href="http://www.cartserver.com/sc/cart.cgi?item=s-4418&amp;view.x=1">VIEW CART </a></span></div></th>
+            </tr>
+          </tbody></table>
+    </div></td>
   </tr>
 </tbody></table>
 <table width="772" border="0" cellspacing="0" cellpadding="6">
@@ -74,72 +74,74 @@ a:active {
       <div align="left"> 
           <div align="left">
             <!-- START SCANALERT CODE -->
-              <a target="_blank" href="https://www.scanalert.com/RatingVerify?ref=www.dietdirect.com"><img width="115" height="32" border="0" src="//images.scanalert.com/meter/www.dietdirect.com/12.gif" alt="HACKER SAFE certified sites prevent over 99.9% of hacker crime." oncontextmenu="alert('Copying Prohibited by Law - HACKER SAFE is a Trademark of ScanAlert'); return false;"></a>
-              <!-- END SCANALERT CODE -->
-            <br>
-            <p>              <strong class="style165">WEIGHT LOSS KITS</strong><br>
+<a target="_blank" href="https://www.scanalert.com/RatingVerify?ref=www.dietdirect.com"><img width="115" height="30" border="0" src="//images.scanalert.com/meter/www.dietdirect.com/32.gif" alt="HACKER SAFE certified sites prevent over 99.9% of hacker crime." oncontextmenu="alert('Copying Prohibited by Law - HACKER SAFE is a Trademark of ScanAlert'); return false;"></a>
+<!-- END SCANALERT CODE -->
+              <br>
+              <strong class="style165"><br>
+              WEIGHT LOSS KITS</strong><br>
               <a href="liquid-protein-diet-weight-loss-program.htm">Weight Loss Diet Plan<br>
               </a><a href="12-week-starter-kit.htm">12 Week Starter-Kit<br>
               </a><a href="8-week-starter-kit.htm">8 Week Starter-Kit<br>
               </a><a href="4-week-starter-kit.htm">4 Week Starter-Kit<br>
               </a><a href="2-week-starter-kit.htm">2 Week Starter-Kit<br>
-              </a><a href="1-week-starter-kit.htm">1 Week Starter-Kit</a></p>
-            <p><strong class="style165">PROTEIN PRODUCTS</strong><br>
-                <a href="liquid-protein-diet-weight-loss-shakes.htm">Protein Diet Shakes<br>
-                </a><a href="liquid-protein-diet-weight-loss-fruit-drinks.htm">Protein Fruit Drinks<br>
-                </a><a href="liquid-protein-diet-hot-cocoa.htm">Hot Cocoa Beverages<br>
-                </a><a href="protein-to-go-drinks.htm">Protein-To-Go Drinks<br>
-                </a><a href="clear-protein-drinks.htm">Clear Protein<br>
-                </a><a href="syntrax-nectar-protein-shakes.htm">Syntrax Nectar<br>
-                </a><a href="protein-10g-diet-weight-loss-bars.htm">Protein Bars (10 grams)<br>
-                </a><a href="protein-15g-diet-weight-loss-bars.htm">Protein Bars (15 grams)<br>
-                </a><a href="protein-variety-pack.htm">Protein Variety Pack<br>
-                </a><a href="liquid-protein-diet-weight-loss-soups.htm">Savory Soups<br>
-                </a><a href="protein-diet-weight-loss-dessert-puddings.htm">Dessert Puddings<br>
-                </a><a href="protein-diet-weight-loss-lite-entrees.htm"> Lite Entrees<br>
-                </a><a href="protein-diet-weight-loss-entrees.htm">Pasta Entrees<br>
-                </a><a href="protein-diet-weight-loss-cereals.htm">Breakfast Cereals<br>
-                </a> <a href="diet-weight-loss-snacks.htm">Pretzels &amp; Snacks<br>
-                </a><a href="liquid-protein-diet-fiber-supplements.htm">Fiber Supplements<br>
-                <br>
-                </a><span class="style165">ACCESSORIES</span> <br>
-                <a href="ultimate-shaker.htm">Ultimate Shaker Cup</a> </p>
-            <p><span class="style165"> <strong>DIET SUPPLEMENTS</strong><br>
-              </span><a href="hoodia-gordonii.htm">Hoodia Gordonii<br>
-              </a><a href="fat-burners.htm">Fat Burners<br>
-              </a><a href="carb-blockers.htm">Carb Blockers<br>
-            </a><a href="cortisol-control.htm">Cortisol Control</a> </p>
-            <p align="left"><span class="style165"><strong> VITAMINS/MINERALS<br>
+              </a><a href="1-week-starter-kit.htm">1 Week Starter-Kit</a><p></p>
+            <p><strong class="style165">PROTEIN DIET FOODS</strong><br>
+              <a href="liquid-protein-diet-weight-loss-shakes.htm">Protein Diet Shakes<br> 
+              </a><a href="liquid-protein-diet-weight-loss-drinks.htm">Protein  Cold Drinks<br>
+              </a><a href="liquid-protein-diet-hot-cocoa.htm">Protein Hot Drinks <br>
+              </a>              <a href="clear-protein-drinks.htm">Clear Protein<br>
+              </a><a href="syntrax-nectar-protein-shakes.htm">
+              </a><a href="protein-diet-weight-loss-bars.htm">  Protein Diet Bars<br>
+              </a>              <a href="protein-variety-pack.htm">
+              </a><a href="liquid-protein-diet-weight-loss-soups.htm">Protein Diet  Soups<br>
+              </a><a href="protein-diet-weight-loss-dessert-puddings.htm">Dessert Puddings<br>
+              </a><a href="protein-diet-weight-loss-lite-entrees.htm"> Lite Entrees<br>
+              </a><a href="protein-diet-weight-loss-entrees.htm">Pasta Entrees<br>
+              </a><a href="protein-diet-weight-loss-breakfast-foods.htm">Breakfast Items</a><a href="protein-diet-weight-loss-cereals.htm"><br>
+              </a> <a href="diet-weight-loss-snacks.htm">Protein  Snacks<br>
+              </a><a href="protein-diet-weight-loss-cookies.htm">Protein Cookies<br>
+              </a><a href="protein-variety-pack.htm">Protein Variety-Pack</a><a href="protein-diet-weight-loss-cookies.htm"><br>
+              </a><a href="liquid-protein-diet-fiber-supplements.htm">Fiber Supplements<br>
+              <br>
+                                                                                                                                                                                                                                                                                                                                                                                                                                </a><span class="style165">ACCESSORIES</span> <br>
+              <a href="ultimate-shaker.htm">Ultimate Shaker Cup</a>            </p>
+          <p><span class="style165"> <strong>DIET PILLS</strong><br>
+          </span><a href="hoodia-gordonii.htm">Hoodia Gordonii<br>
+          </a><a href="fat-burners.htm">Fat Burners<br>
+          </a><a href="carb-blockers.htm">Carb Blockers<br>
+          </a><a href="cortisol-control.htm">Cortisol Control</a>  </p>
+          <p align="left"><span class="style165"><strong> VITAMINS<br>
               </strong></span><a href="bariatric-vitamins.htm">Bariatric Vitamins<br>
               </a><a href="potassium-supplement.htm">Potassium Supplement<br>
-              </a><a href="vitamin-b12.htm">Sublingual Vitamin B12<br>
-            </a><a href="omega-essential-fatty-acids.htm">Omega-3 Fatty Acids</a> </p>
-            <p align="left"><strong> </strong><span class="style165"><strong>DIET PATCHES<br>
-            </strong></span><strong><a href="liquid-protein-diet-weight-loss-shakes.htm"> </a></strong><strong><a href="protein-diet-weight-loss-bars.htm"> </a></strong><a href="green-tea-patch.htm">Green Tea 300 Patch</a><strong></strong></p>
+            </a><a href="vitamin-b12.htm">Sublingual Vitamin B12<br>
+          </a><a href="omega-essential-fatty-acids.htm">Omega-3 Fatty Acids</a> </p>
+            <p align="left">            <span class="style165"><strong>DIET PATCHES<br>
+            </strong></span>          <a href="green-tea-patch.htm">
+          </a><a href="hoodia-diet-patch.htm">Hoodia Patch<br>
+          </a><a href="dermaloss-diet-patch.htm">Dermaloss Patch</a> </p>
             <p align="left"><span class="style165"><strong>OTHER LINKS<br>
               </strong></span><a href="Affiliates.htm">Become An Affiliate<br>
               </a><a href="Testimonials.htm">Testimonials<br>
               </a><a href="Articles.htm">Diet Articles<br>
-              </a><a href="Guarantee.htm">100% Guarantee<br>
+              </a><a href="Guarantee.htm">Our Guarantee<br>
               </a><a href="Shipping.htm">Shipping Policy<br>
               </a><a href="Privacy.htm">Privacy Policy<br>
               </a><a href="AboutUs.htm">About Us<br>
               </a><a href="ContactUs.htm">Contact Us<br>
-            </a><a href="SiteMap.htm">Site Map</a><a href="http://www.dietbargains.com"><br>
-            </a>
-              <!-- BEGIN: Constant Contact Border Email List Button -->
+              </a><a href="SiteMap.htm">Site Map<br>
+              </a><br>
+            <!-- BEGIN: Constant Contact Border Email List Button -->
             </p>
             <div align="center">
               <table width="135" border="0" cellspacing="1" cellpadding="2" bgcolor="#0033FF">
                 <tbody><tr>
                   <td bgcolor="#FFFFFF" align="center"><div style="float: right; margin-right:3px; margin-top:2px; background-color: #0000CC;"><a href="http://ui.constantcontact.com/d.jsp?m=1010990144498&amp;p=oi" target="_blank"><img src="http://img.constantcontact.com/ui/images/visitor/email5_trans.gif" alt="Email Newsletter icon, E-mail Newsletter icon, Email List icon, E-mail List icon" border="0" align="absmiddle"></a></div>
-                      <a href="http://ui.constantcontact.com/d.jsp?m=1010990144498&amp;p=oi" style="text-decoration:none; font-weight:bold;  font-family:Verdana,Geneva,Arial,Helvetica,sans-serif; font-size:13px; color:#0000CC;" target="_blank">Join our FREE Email Mailing List</a></td>
+                    <a href="http://ui.constantcontact.com/d.jsp?m=1010990144498&amp;p=oi" style="text-decoration:none; font-weight:bold;  font-family:Verdana,Geneva,Arial,Helvetica,sans-serif; font-size:13px; color:#0000CC;" target="_blank">Join our FREE Email Mailing List<br>
+                    </a><a href="http://ui.constantcontact.com/d.jsp?m=1010990144498&amp;p=oi" style="text-decoration:none; font-family:Verdana,Geneva,Arial,Helvetica,sans-serif; font-size:13px; color:#0000CC;" target="_blank"><span class="style123 style114 style237">Get Special Offers, Product Alerts &amp; More!</span></a></td>
                 </tr>
               </tbody></table>
             </div>
-            <!-- END: Constant Contact Border Email List Button -->
-            <br>
-            <p></p>
+            <!-- END: Constant Contact Border Email List Button --><p></p>
           </div>
           <blockquote> </blockquote>
     </div>    
@@ -221,27 +223,26 @@ a:active {
         <tbody><tr valign="top">
           <td height="176" bgcolor="#FFFFFF">
             <p align="center"><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><b><font color="#000000" size="5"><br>
-              </font></b></font><font face="Verdana, Arial, Helvetica, sans-serif"><b> <span class="style72">DietDirect.com</span></b></font><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><font color="#000000"><br>
-              <b>Presented By WonderSlim®</b> <br>
-        415 South College Road #10 • Wilmington, NC 28403<b><br>
-        </b><strong>Phone:</strong> 1.800.882.4830</font><b>
-        <script type="text/javascript"><!--
-var fontcolor = '#333333';
-var fontcode = '';
-var fontface = 'verdana';
-var fontsize = '1';
-var fontstyle = '';
-var fontclass = '';
-var textline = 'Dept.';
-var defaultdisplay = 'Dept. 22';
-// -->
+              </font></b></font><font face="Verdana, Arial, Helvetica, sans-serif"><b> <span class="style72">DietDirect</span></b></font><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><font color="#000000"><br>
+        415 South College Road #18 • Wilmington, NC 28403<b><br>
+        </b><strong>Phone:</strong> 1.800.882.4830
+        <!-- cj display !-->
+        <script>
+	if (getCookie('CustomerReference'))
+                {
+                 /*@CHRISK: Added Prefix variable to allow easy
+updating of the prefix that is displayed in front of the affiliate
+tracking number */
+	var prefix='Ref #:';
+	document.write(prefix + getCookie('CustomerReference') + "&nbsp;");
+	}
 </script>
-        <script type="text/javascript" src="https://shareasale.com/phone.cfm?merchantID=7669">
-</script>
-        <br>
-        </b> <b><font color="#000000">Email:</font><a href="mailto:info@dietdirect.com"> info@dietdirect.com</a></b></font> <font face="Verdana, Arial, Helvetica, sans-serif" size="1"><br>
-        </font><font face="Verdana, Arial, Helvetica, sans-serif"><i><font size="1">Copyright © 2004 WonderSlim®. All rights reserved.</font></i></font>
-          </p><p align="center"><a href="http://www.wonderslim.com">WonderSlim® </a> </p></td>
+        <!-- shareasale display !-->
+        <script type="text/javascript" src="https://shareasale.com/phone.cfm?merchantID=7669"></script>
+              </font><b> <br>
+              </b> <b><font color="#000000">Email:</font><a href="mailto:info@dietdirect.com"> info@dietdirect.com</a></b></font> <font face="Verdana, Arial, Helvetica, sans-serif" size="1"><br>
+              </font><font face="Verdana, Arial, Helvetica, sans-serif"><i><font size="1">Copyright © 2004 DietDirect.com. All rights reserved.</font></i></font>
+          </p><p align="center" class="style230">Other e-shopping sites: <a href="http://www.wonderslim.com">WonderSlim.com</a>, <a href="http://www.bariatricmart.com">BariatricMart.com</a> </p></td>
         </tr>
       </tbody></table>
       <p>&nbsp;</p>
