--- a/p/pr/pro/proxibid.com.html
+++ b/p/pr/pro/proxibid.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the proxibid.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231093204id_/http%3A//www.proxibid.com/asp/PrivacyPolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the proxibid.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615112255id_/http%3A//www.proxibid.com/asp/PrivacyPolicy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>Proxibid: Privacy Policy</title>
@@ -32,6 +32,7 @@ function MM_swapImage() { //v3.0
 }
 //-->
 </script>
+<script type="text/javascript" src="/jscript/__utm.js"></script>
 <script language="javascript">
 <!--
 function DoOnLoad()
@@ -40,6 +41,7 @@ function DoOnLoad()
 }
 //-->
 </script>
+
 </head>
 <body bgcolor="#CCCCCC" text="#000000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onload="MM_preloadImages('/images/btn_bidders_on.gif','/images/btn_auctioneers_on.gif','/images/nav_home_on.gif','/images/nav_create_on.gif','/images/nav_about_on.gif','/images/nav_archives_on.gif','/images/nav_services_on.gif','/images/nav_contact_on.gif','/images/btn_search_on.gif','/images/btn_adv_on.gif','/images/btn_return_on.gif','/images/btn_logout_on.gif');DoOnLoad();"><a name="Top"><table width="750" border="0" cellspacing="0" cellpadding="0" align="center">
   <tbody><tr valign="top"> 
@@ -278,7 +280,7 @@ function DoOnLoad()
 </tbody></table>
 <table width="750" border="0" cellspacing="0" cellpadding="5" align="center">
   <tbody><tr>
-    <td><p class="footer" align="center"><a href="http://www.proxibid.com/asp/Home.asp">home</a> | <a href="http://www.proxibid.com/asp/CreateAccountFork.asp">create account</a> | <a href="http://www.proxibid.com/asp/contact.asp">contact</a> | <a href="http://www.proxibid.com/asp/Help.asp" "="">help</a> | <a href="http://www.proxibid.com/asp/AuctionArchives.asp">archives</a> | <a href="http://www.proxibid.com/asp/Services.asp">services</a> | <a href="http://www.proxibid.com/asp/AboutProxibid.asp">about</a> | <a href="http://www.proxibid.com/asp/PressRelease.asp">press releases</a> | <a href="http://www.proxibid.com/asp/Testimonial.asp">testimonials</a></p></td>
+    <td><p class="footer" align="center"><a href="http://www.proxibid.com/asp/Home.asp">home</a> | <a href="http://www.proxibid.com/asp/CreateAccountFork.asp">create account</a> | <a href="http://www.proxibid.com/asp/contact.asp">contact</a> | <a href="http://www.proxibid.com/asp/Help.asp">help</a> | <a href="http://www.proxibid.com/asp/AuctionArchives.asp">archives</a> | <a href="http://www.proxibid.com/asp/Services.asp">services</a> | <a href="http://www.proxibid.com/asp/AboutProxibid.asp">about</a> | <a href="http://www.proxibid.com/asp/PressRelease.asp">press releases</a> | <a href="http://www.proxibid.com/asp/Testimonial.asp">testimonials</a></p></td>
   </tr>
   <tr>
     <td><p class="footer" align="center">Live Internet auctions. Real Auctioneers. Real-time bidding.</p></td>
@@ -288,12 +290,17 @@ function DoOnLoad()
     <td><p class="footer" align="center"><a href="/asp/SiteCredits.asp">Site Credits</a> | <a href="/asp/TermsAndConditions.asp">Terms and Conditions</a> | <a href="/asp/PrivacyPolicy.asp">Privacy Policy</a></p></td>
   </tr>
   <tr>
-    <td><p class="footer" align="center">© 2004 Proxibid, Inc. All rights Reserved.</p></td>
+    <td><p class="footer" align="center">© 2001 - 2006 Proxibid, Inc. All rights Reserved.</p></td>
   </tr>
   <tr>
-    <td align="center" style="font-size:9px;"><a href="http://www.bbbonline.org/cks.asp?id=10412165153349762" target="_blank"><img src="/Images/ReliabilitySeal5.gif"></a><br>(2)</td>
+    <td align="center" style="font-size:9px;"><a href="http://www.bbbonline.org/cks.asp?id=10412165153349762" target="_blank"><img src="/Images/ReliabilitySeal5.gif"></a><br>(2)&nbsp;6/15/2006 6:22:12 AM</td>
   </tr>
 </tbody></table>
-
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-291821-1";
+urchinTracker();
+</script>
 
 </a></body></html>
