--- a/a/ar/art/articleintelligence.com.html
+++ b/a/ar/art/articleintelligence.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the articleintelligence.com privacy policy that was archived on 2005-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051215223926id_/http%3A//articleintelligence.co.uk/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the articleintelligence.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615112608id_/http%3A//www.articleintelligence.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -13,7 +13,7 @@
 
 <title>www.articleintelligence.com</title>
 
-<link rel="Stylesheet" href="http://articleintelligence.co.uk/mainstyle.css" type="text/css" media="screen">
+<link rel="Stylesheet" href="http://www.articleintelligence.com/mainstyle.css" type="text/css" media="screen">
 
 </head>
 
@@ -25,13 +25,13 @@
 
 
 
-<table class="maintable" cellspacing="0" cellpadding="0" width="750">
+<noscript><center> <table bgcolor=gray cellspacing=0 border=2><tr> <td><table cellpadding=2 cellspacing=0 border=0><tr><td align=center> <font face=arial size=-1>This site is a member of WebRing. <br>To browse visit <a href="http://ss.webring.com/navbar?f=l;y=mabont;u=defurl"> Here</a>.</font></td></tr></table></td></tr></table> </center></noscript><table class="maintable" cellspacing="0" cellpadding="0" width="750">
 
 
 
 <tbody><tr>
 
-<td colspan="1"><a href="http://articleintelligence.co.uk"><img border="0" src="http://articleintelligence.co.uk/images/logo.gif" width="282" height="56"></a></td>
+<td colspan="1"><a href="http://www.articleintelligence.com"><img border="0" src="http://www.articleintelligence.com/images/logo.gif" width="282" height="56"></a><a href="http://www.text-link-ads.com/?referrer=10728"><img src="http://www.text-link-ads.com/images/text_link_ads_A_468x60.gif" border="0" alt="Text Link Ads"></a><a href="http://www.isedn.org/"><img src="http://www.articleintelligence.com/images/genanim234x60.gif" border="0" alt="ISEDN links"></a></td>
 
 <td colspan="1"></td>
 
@@ -41,7 +41,7 @@
 
 <tr>
 
-<form name="serch" method="post" action="http://articleintelligence.co.uk/indexser.php"></form>
+<form name="serch" method="post" action="http://www.articleintelligence.com/indexser.php"></form>
 
 <td class="topnav" colspan="2">Search:
 
@@ -80,30 +80,30 @@ Porthcawl</b></p>
 </td> <!-- End of Main Content -->
 <td class="navcell"> <!-- Starting of Navigator -->
 
-<div class="rightnavbox"><a href="http://articleintelligence.co.uk/signup.php">Sign Up</a> for a free account or
-	<a href="http://articleintelligence.co.uk/learnmore.php">learn more</a>.</div>
+<div class="rightnavbox"><a href="http://www.articleintelligence.com/signup.php">Sign Up</a> for a free account or
+	<a href="http://www.articleintelligence.com/learnmore.php">learn more</a>.</div>
 <div class="spacer"></div>
 
 <div class="rightnavbox">
-<a href="http://articleintelligence.co.uk/submitarticles.php">Submit Articles</a><br>
-<a href="http://articleintelligence.co.uk/login.php">Member Login</a><br>
-<a href="http://articleintelligence.co.uk/topauthors.php">Top Authors</a><br>
-<a href="http://articleintelligence.co.uk/populararticles.php">Most Popular Articles</a><br>
-<a href="http://articleintelligence.co.uk/submitguidelines.php">Submission Guidelines</a><br>
-<a href="http://articleintelligence.co.uk/ezinenotify.php">Ezine Notifications</a><br>
-<a href="http://articleintelligence.co.uk/rssfeed.php">Article RSS Feeds</a><br>
+<a href="http://www.articleintelligence.com/submitarticles.php">Submit Articles</a><br>
+<a href="http://www.articleintelligence.com/login.php">Member Login</a><br>
+<a href="http://www.articleintelligence.com/topauthors.php">Top Authors</a><br>
+<a href="http://www.articleintelligence.com/populararticles.php">Most Popular Articles</a><br>
+<a href="http://www.articleintelligence.com/submitguidelines.php">Submission Guidelines</a><br>
+<a href="http://www.articleintelligence.com/ezinenotify.php">Ezine Notifications</a><br>
+<a href="http://www.articleintelligence.com/rssfeed.php">Article RSS Feeds</a><br>
 
 </div>
 
 <div class="spacer"></div>
 <div class="rightnavbox">
-<a href="http://articleintelligence.co.uk/newstuff.php">New Stuff And Other Directories</a><br>
-<a href="http://articleintelligence.co.uk/aboutus.php">About Us</a><br>
-<a href="http://articleintelligence.co.uk/siteblog.php">Site Blog</a><br>
-<a href="http://articleintelligence.co.uk/linkus.php">Link to Us</a><br>
-<a href="http://articleintelligence.co.uk/contacts.php">Contact Us</a><br>
-<a href="http://articleintelligence.co.uk/privacy.php">Privacy Policy</a><br>
-<a href="http://articleintelligence.co.uk/terms.php">Terms of Service</a><br>
+<a href="http://www.articleintelligence.com/newstuff.php">New Stuff And Other Directories</a><br>
+<a href="http://www.articleintelligence.com/aboutus.php">About Us</a><br>
+<a href="http://www.articleintelligence.com/siteblog.php">Site Blog</a><br>
+<a href="http://www.articleintelligence.com/linkus.php">Link to Us</a><br>
+<a href="http://www.articleintelligence.com/contacts.php">Contact Us</a><br>
+<a href="http://www.articleintelligence.com/privacy.php">Privacy Policy</a><br>
+<a href="http://www.articleintelligence.com/terms.php">Terms of Service</a><br>
 </div>
 
 <div class="spacer"></div>
@@ -123,6 +123,8 @@ google_color_text = "333333";
 //--></script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
+<a href="http://www.123ExchangeLinks.com"><font face="verdana" size="2">123ExchangeLinks.com - Find Quality Link Exchange Partners</font></a>
+<p>Matrix Media Technologies: <a href="http://www.matrixmt.com/" title="Search Marketing Company">Search Engine Marketing</a> specialists providing the best in SEM, SEO, and search engine analysis.</p>
 <script type="text/javascript"><!--
 google_ad_client = "pub-2695616324441865";
 google_ad_width = 160;
@@ -138,14 +140,11 @@ google_color_text = "333333";
 //--></script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
-<!--?php
-	ini_set ("include_path", ini_get ("include_path") . ':../:../../:../../../:../../../../:../../../../../');
-	include ('lv0h6BF38LcYyn376m.php');
-	echo DisplayLinks(5,'',' - ','','');
-?--></div>
+</div>
+
 </td> <!-- End of Navigator -->
 </tr>
-
+<script language="javascript" type="text/javascript" src="http://ss.webring.com/navbar?f=j;y=mabont;u=defurl"> </script>
 </tbody></table>
 <!--?php
 	ini_set ("include_path", ini_get ("include_path") . ':../:../../:../../../:../../../../:../../../../../');
