--- a/p/pe/pet/pets.ca.html
+++ b/p/pe/pet/pets.ca.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pets.ca privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210191001id_/http%3A//pets.ca/help/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pets.ca privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615113536id_/http%3A//www.pets.ca/help/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 
@@ -53,7 +53,7 @@ function MM_swapImage() { //v3.0
 <center><script language="javascript"><!--
 document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=Petsca&adSpace=ROS&size=468x60&type=horiz&pop=0&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=Petsca&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;pop=0&amp;requestID=16020565840.8037558275142935"></script>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=Petsca&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;pop=0&amp;requestID=16020566650.32094661787316947"></script>
 <noscript>
    <a href="http://a.tribalfusion.com/i.click?site=Petsca&adSpace=ROS&size=468x60&requestID=1444029787" target=_blank>
    <img src="http://a.tribalfusion.com/i.ad?site=Petsca&adSpace=ROS&size=468x60&requestID=1444029787" 
@@ -250,11 +250,13 @@ Decals</a><br>
   <tr>
     <td valign="top" bgcolor="#FFFFFF"><p><font size="2" face="Arial, Helvetica, sans-serif"><a href="http://www.pets.ca">Home</a><a href="../index-copyright.htm"><br>
   Copyright &amp; Legal</a></font>
-      </p><p><font size="2" face="Arial, Helvetica, sans-serif">©1999-2004
+      </p><p>
+      <font size="2" face="Arial, Helvetica, sans-serif">© 2006
 Pets.ca<br>
-  All rights reserved.<br></font></p><p align="left"><font size="2" face="Arial, Helvetica, sans-serif"><font size="2" face="Arial, Helvetica, sans-serif"><a class="add" href="javascript:window.external.AddFavorite('http://www.pets.ca', 'Pets.ca')">Add
+  All rights reserved.<br>
+  </font></p><p align="left"><font size="2" face="Arial, Helvetica, sans-serif"><font size="2" face="Arial, Helvetica, sans-serif"><a class="add" href="javascript:window.external.AddFavorite('http://www.pets.ca', 'Pets.ca')">Add
             Pets.ca to your favourites</a> </font>
-            </font></p><p align="justify"></p></td>
+      </font></p><p align="justify"></p></td>
   </tr></tbody></table><!-- #EndLibraryItem --><p><font size="2" face="Arial, Helvetica, sans-serif">  </font></p></div></td>
 	
           <td width="453" align="left" valign="top" bordercolor="#FFFFFF" bgcolor="#FFFFFF"><div align="center">
@@ -328,7 +330,7 @@ Pets.ca<br>
           <tr>
             <td height="130" colspan="2" bordercolor="#000000"><div align="center">
                 <p><font face="Arial, Helvetica, sans-serif">
-                  <a href="http://www.pets.ca/onlinestore/module.php?name=onlinestore&amp;func=viewprod&amp;prodid=109" target="_blank"><img src="http://www.pets.ca/onlinestore/modeng/name/photogallery/func/download/user/website/dir/%24%24photogallery%24%24onlinestore/object/pg0132_sm.jpg" alt="" border=""><br><b>Boxer Magnet (Package of 2)</b></a>
+                  <a href="http://www.pets.ca/onlinestore/module.php?name=onlinestore&amp;func=viewprod&amp;prodid=141" target="_blank"><img src="http://www.pets.ca/onlinestore/modeng/name/photogallery/func/download/user/website/dir/%24%24photogallery%24%24onlinestore/object/pg0181_sm.jpg" alt="" border=""><br><b>Round pewter setting with stone</b></a>
                 </font></p>
             </div></td>
           </tr>
@@ -340,7 +342,7 @@ Pets.ca<br>
           </tr>
           <tr>
             <td height="130" colspan="2" bordercolor="#000000"><div align="center">
-                <a href="http://www.pets.ca/onlinestore/module.php?name=onlinestore&amp;func=viewprod&amp;prodid=112" target="_blank"><img src="http://www.pets.ca/onlinestore/modeng/name/photogallery/func/download/user/website/dir/%24%24photogallery%24%24onlinestore/object/pg0135_sm.jpg" alt="" border=""><br><b>Siberian Husky Magnet (Package of 2)</b></a>
+                <a href="http://www.pets.ca/onlinestore/module.php?name=onlinestore&amp;func=viewprod&amp;prodid=105" target="_blank"><img src="http://www.pets.ca/onlinestore/modeng/name/photogallery/func/download/user/website/dir/%24%24photogallery%24%24onlinestore/object/pg0128_sm.jpg" alt="" border=""><br><b>Bichon Frise Magnet (Package of 2)</b></a>
             </div></td>
           </tr>
         </tbody></table>
@@ -369,8 +371,9 @@ Pets.ca<br>
             Us</a>  | <a href="privacy.html">Privacy
             Policy and Security</a>&nbsp;| <a href="../index-press.htm">Press
             Center</a> |<br>
-            <a href="../index-copyright.htm">Copyright &amp; Legal</a> © 1999 - 2005 Pets.ca.
-    All rights reserved.</font></div><p></p></td>
+            <a href="../index-copyright.htm">Copyright &amp; Legal</a> © 2006 Pets.ca.
+    All rights reserved.</font></div>
+        <p></p></td>
   </tr>
 </tbody></table>
 <center>
